1.2
-------------------------

- introduce a new data input/output mechanism to allow the master side 
  to send and receive data from a slave. 

- fix PyPI description 

1.1
-------------------------

- fix an indefinite hang which would wait for events although no events
  are pending - this happened if items arrive very quickly while 
  the "reschedule-event" tried unconditionally avoiding a busy-loop
  and not schedule new work. 

1.0
-------------------------

- moved code out of py-1.1.1 into its own plugin
- use a new, faster and more sensible model to do load-balancing 
  of tests - now no magic "MAXITEMSPERHOST" is needed and load-testing
  works effectively even with very few tests. 
- cleaned up termination handling 
- make -x cause hard killing of test nodes to decrease wait time 
  until the traceback shows up on first failure
